@@ -1,22 +1,6 @@
 #!/bin/bash
 
-rm -rf custom-jre
-
-JDK_MAJOR=$(jlink --version | cut -d '.' -f 1)
-
-# Avoid warnings but still support older JDKs
-
-if [ "$JDK_MAJOR" -ge 21 ]; then
-    COMPRESS="--compress=zip-6"
-else
-    COMPRESS="--compress=2"
-fi
-
-jlink --module-path $JAVA_HOME/jmods \
-      --add-modules java.base,java.desktop,java.logging,jdk.unsupported  \
-      --output custom-jre $COMPRESS
-
-
+./buildcommon
 
 rm -rf output
 
@@ -29,13 +13,11 @@ jpackage --name DuoCBZReader \
          --dest output \
          --copyright "Copyright 2025 Paul Janssens - All rights reserved" \
          --app-version "1.0.3" \
-         --file-associations zip.properties \
          --file-associations cbz.properties \
-         --file-associations epub.properties \
          --icon MyIcon.icns \
          --mac-package-identifier be.afront.reader
 
-plutil -replace CFBundleDocumentTypes.0 -xml '<dict>
+plutil -insert CFBundleDocumentTypes.0 -xml '<dict>
 <key>CFBundleTypeName</key><string>ZIP Archive</string>
 <key>CFBundleTypeRole</key><string>Viewer</string>
 <key>LSHandlerRank</key><string>Alternate</string>
